--- a/2025-Git.md
+++ b/2025-Git.md
@@ -27,21 +27,21 @@
 이번 실습에서는 유저의 이름과 이메일을 설정해보겠습니다. 명령어는 각각 다음과 같습니다.
 
 ```
-git nfig --global user.name "elice"
+git config --global user.name "elice"
 
-git nfig --global user.email "rabbit@elice.io"
+git config --global user.email "rabbit@elice.io"
 
 ```
 
 ## 이렇게 해봐요!
 
-1. `git nfig --global user.name`명령어로 이름을 설정해 봅시다.
-2. `git nfig --global user.email`명령어로 이메일을 설정해 봅시다.
-3. `git nfig --list`명령어를 사용해 이름과 이메일이 설정한 대로 출력되는지 확인해보세요.
+1. `git config --global user.name`명령어로 이름을 설정해 봅시다.
+2. `git config --global user.email`명령어로 이메일을 설정해 봅시다.
+3. `git config --list`명령어를 사용해 이름과 이메일이 설정한 대로 출력되는지 확인해보세요.
 
 ### 추가로 해봐요!
 
-1. `--global`을 제외한,`git nfig user.name` 명령어로 이름을 설정해보세요.
+1. `--global`을 제외한,`git config user.name` 명령어로 이름을 설정해보세요.
 2. `fatal: not in a git directory`라는 오류 메시지를 확인할 수 있습니다. git 저장소가 시작되지 않은 상태에서는 유저 설정 시에 반드시 `--global`을 입력해야합니다. git 저장소를 만드는 방법은 다음 실습에서 배우게 됩니다.
 
 ## **git 저장소 만들어보기**
